--- a/react-webpack/public/backend/templates/administrator/admin_transaction_history.html
+++ b/react-webpack/public/backend/templates/administrator/admin_transaction_history.html
@@ -385,7 +385,7 @@
         
                     <div class="search-bar">
                         <div class="input-wrapper">
-                            <input type="text" id="searchInput" placeholder="Tìm kiếm..." oninput="filterTable()" />
+                            <input type="text" id="searchInput" placeholder="Tìm kiếm theo tên..." oninput="filterTable()" />
                             <button id="clearButton" onclick="clearSearch()">&times;</button>
                         </div>
                         <button id="searchButton" onclick="filterTable()">Tìm</button>
