--- a/react-webpack/public/backend/templates/administrator/components/sidebar.html
+++ b/react-webpack/public/backend/templates/administrator/components/sidebar.html
@@ -1,5 +1,5 @@
 <!-- Sidebar -->
-<div class="w-52 bg-gray-900 text-white h-screen flex flex-col p-4">
+<div class="w-52 bg-gray-900 text-white  flex flex-col p-4">
   <!-- Menu Item 1 -->
   <div
     class="menu-item flex flex-col items-center space-y-2 py-4 hover:bg-gray-700 rounded-md"
