user_homescreen ver 2

--- a/react-webpack/public/backend/templates/user_homescreen.html
+++ b/react-webpack/public/backend/templates/user_homescreen.html
@@ -146,6 +146,9 @@
 				<div class="man">
 					<img src="{{ url_for('static', filename='images/man.png') }}" />
 				</div>
+				<div class="fiftypercent">
+					<img src="{{ url_for('static', filename='images/50%.png') }}" />
+				</div>
 			</div>
 			<div class="sports-filters">
 				<button class="filter-btn active">Sân bóng đá</button>
