--- a/react-webpack/public/backend/templates/user_dashboard.html
+++ b/react-webpack/public/backend/templates/user_dashboard.html
@@ -13,7 +13,7 @@
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 		<link
 			rel="stylesheet"
-			href="{{ url_for('static', filename='css/nav_bar_deposit.css') }}" />
+			href="{{ url_for('static', filename='css/nav_bar_homescreen.css') }}" />
 		<link
 			rel="stylesheet"
 			href="{{ url_for('static', filename='css/user_dashboard.css') }}" />
@@ -118,7 +118,7 @@
 				<i class="fas fa-search" onclick="performSearch()"></i>
 			</div>
 
-			<!-- <div class="sidebar">
+			<div class="sidebar">
 				<div class="menu-item" style="background-color: rgb(14, 1, 87)">
 					<div class="icon">
 						<img
@@ -157,7 +157,7 @@
 					</div>
 					<div class="text">Lịch sử giao dịch</div>
 				</div>
-			</div> -->
+			</div>
 			<div class="under-calendar-bar">
 				<p
 					class="two-digit-time-cell"
