--- a/react-webpack/public/backend/templates/user_homescreen.html
+++ b/react-webpack/public/backend/templates/user_homescreen.html
@@ -13,7 +13,7 @@
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 		<link
 			rel="stylesheet"
-			href="{{ url_for('static', filename='css/nav_bar_deposit.css') }}" />
+			href="{{ url_for('static', filename='css/nav_bar_homescreen.css') }}" />
 		<link
 			rel="stylesheet"
 			href="{{ url_for('static', filename='css/user_homescreen.css') }}" />
@@ -105,6 +105,50 @@
 			</div>
 		</div>
 		<div class="main-wrapper">
+			      <!-- side bar -->
+				  <div class="sidebar">
+					<div class="menu-item">
+					  <div class="icon">
+						<img
+						  src="{{ url_for('static', filename='images/icon_dashboard.png') }}"
+						/>
+					  </div>
+					  <div class="text">Bảng điều khiển</div>
+					</div>
+					<div class="menu-item">
+					  <div class="icon">
+						<img
+						  src="{{ url_for('static', filename='images/icon_book_field.png') }}"
+						/>
+					  </div>
+					  <div class="text">Đặt sân</div>
+					</div>
+					<div class="menu-item">
+					  <div class="icon">
+						<img
+						  src="{{ url_for('static', filename='images/icon_history_book_field.png') }}"
+						  class="abc"
+						/>
+					  </div>
+					  <div class="text">Lịch sử đặt sân</div>
+					</div>
+					<div class="menu-item">
+					  <div class="icon">
+						<img
+						  src="{{ url_for('static', filename='images/icon_deposit.png') }}"
+						/>
+					  </div>
+					  <div class="text">Nạp tiền</div>
+					</div>
+					<div class="menu-item">
+					  <div class="icon">
+						<img
+						  src="{{ url_for('static', filename='images/icon_payment_history.png') }}"
+						/>
+					  </div>
+					  <div class="text">Lịch sử giao dịch</div>
+					</div>
+				  </div>
 			<div class="sports-section">
 				<div class="sports-info">
 					<p class="highlight-text">
