--- a/react-webpack/public/backend/templates/administrator/components/sidebar.html
+++ b/react-webpack/public/backend/templates/administrator/components/sidebar.html
@@ -1,7 +1,8 @@
 <!-- Sidebar -->
 <div class="w-52 bg-gray-900 text-white flex flex-col p-4">
   <!-- Menu Item 1 -->
-  <div
+  <a
+    href="/admin_dashboard"
     class="menu-item flex flex-col items-center space-y-2 py-4 hover:bg-gray-700 rounded-md"
   >
     <div class="icon w-8 h-8">
@@ -13,10 +14,11 @@
     </div>
 
     <div class="text text-lg font-semibold">Trang chủ</div>
-  </div>
+  </a>
 
   <!-- Menu Item 2 -->
-  <div
+  <a
+    href="#"
     class="menu-item flex flex-col items-center space-y-2 py-4 hover:bg-gray-700 rounded-md"
   >
     <div class="icon w-8 h-8">
@@ -27,10 +29,11 @@
       />
     </div>
     <div class="text text-lg font-semibold">Quản lý sân bóng</div>
-  </div>
+  </a>
 
   <!-- Menu Item 3 -->
-  <div
+  <a
+    href="/admin_manage_user"
     class="menu-item flex flex-col items-center space-y-2 py-4 hover:bg-gray-700 rounded-md"
   >
     <div class="icon w-8 h-8">
@@ -41,10 +44,11 @@
       />
     </div>
     <div class="text text-lg font-semibold">Quản lý người dùng</div>
-  </div>
+  </a>
 
   <!-- Menu Item 4 -->
-  <div
+  <a
+    href="#"
     class="menu-item flex flex-col items-center space-y-2 py-4 hover:bg-gray-700 rounded-md"
   >
     <div class="icon w-8 h-8">
@@ -55,10 +59,11 @@
       />
     </div>
     <div class="text text-lg font-semibold">Thống kê</div>
-  </div>
+  </a>
 
   <!-- Menu Item 5 -->
-  <div
+  <a
+    href="#"
     class="menu-item flex flex-col items-center space-y-2 py-4 hover:bg-gray-700 rounded-md"
   >
     <div class="icon w-8 h-8">
@@ -69,5 +74,5 @@
       />
     </div>
     <div class="text text-lg font-semibold">Lịch sử giao dịch</div>
-  </div>
+  </a>
 </div>
