--- a/react-webpack/public/backend/templates/administrator/dashboard.html
+++ b/react-webpack/public/backend/templates/administrator/dashboard.html
@@ -125,6 +125,7 @@
                 </ul>
                 <button
                   class="w-36 bg-green-500 text-white py-2 rounded hover:bg-green-600 mx-auto block"
+                  onclick="window.location.href='/admin_manage_user';"
                 >
                   Đi tới
                 </button>
